Style/style.css
*{
    box-sizing: border-box;
}
header{
    display: flow-root;
    gap: 10px;
}
body{
    background-color: rgb(173, 140, 140);
 font-family: Georgia, 'Times New Roman', Times, serif;
 border:black 5px;
 text-shadow: 1px 0.5px ;
 font-size: 20px;
 line-height: 1.5;
 background-image: radial-gradient(circle, rgb(120, 230, 120), rgb(243, 218, 218));
 margin: 10px 5px 5px 5px;


}
h2{
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    border-bottom: 1px solid black;
}
h3{
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
footer{
    background-color: black;
    font-style: italic;
    font-size: medium;
    color: white;
    padding: 20px;
    text-align: center;
}
section{
    padding-top: 10px;
    
}

a{
    color: rgb(97, 97, 171);
}
a:hover{
    color: blue;
}
div{
    padding: 5px 5px 5px 5px;
}
ul{
margin-block: 20px;
list-style-type: circle;
list-style-position: outside;
}
p{
    padding: 15px;
    border-style: inset;
}

